--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,8 @@ table {
   font-size: larger;
   border-collapse: separate;
   border-spacing: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /*-- Contact Page --*/
