--- a/css/style.production.css
+++ b/css/style.production.css
@@ -219,6 +219,8 @@ table {
   font-size: larger;
   border-collapse: separate;
   border-spacing: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /*-- Contact Page --*/
