--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 /*-- Variables --*/
 :root {
   /*- Colors -*/
-  --blue-bg: rgba(135, 183, 243, 0.4);
-  --blue-button: rgba(135, 183, 243, 0.6);
-  --blue: rgba(135, 183, 243, 1);
-  --gray: rgb(60, 60, 60);
+  --green-bg: rgba(66, 155, 118, 0.4);
+  --green-button: rgba(66, 155, 118, 0.4);
+  --green: rgba(118, 180, 151, 1);
+  --gray: rgb(61, 61, 61);
   --grid-gray: rgba(60, 60, 60, 0.2);
   --gold: goldenrod;
   --white: whitesmoke;
@@ -31,14 +31,20 @@ li {
   align-items: center;
 }
 
+h1 {
+  font-family: 'Mogra', 'cursive';
+  color: rgb(27,27,27);
+}
+
 h1,
 h2 {
   margin: 12px 0px;
+  color: rgb(27,27,27);
 }
 
 body {
   margin: 0px;
-  background-color: var(--blue-bg);
+  background-color: var(--green-bg);
   font-family: var(--body-font);
 }
 
@@ -58,8 +64,8 @@ input:focus {
 header {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 60px;
-  font-size: x-large;
+  margin-bottom: 80px;
+  font-size: large;
   font-family: "Bungee", cursive;
   background-color: var(--gray);
 }
@@ -74,8 +80,10 @@ header a {
 }
 
 .logo {
-  width: 150px;
-  height: auto;
+  width: auto;
+  height: 35px;
+  padding-top: 4px;
+  filter: var(--cloud-filter);
 }
 
 .nav-links ul {
@@ -83,7 +91,7 @@ header a {
   gap: 64px;
   align-items: center;
   padding-right: 64px;
-  padding-top: 52px;
+  padding-top: 10px;
 }
 
 .nav-links a {
@@ -95,7 +103,7 @@ header a {
 #aboutme,
 #work,
 #contact {
-  color: var(--blue);
+  color: var(--green);
 }
 
 .nav-links a:hover,
@@ -111,7 +119,7 @@ header a {
 #aboutme:active,
 #work:active,
 #contact:active {
-  color: var(--blue);
+  color: var(--green);
   text-decoration: underline;
 }
 
@@ -140,16 +148,28 @@ header a {
 .content > ul {
   padding: 0px 20px;
   margin-right: auto;
+  padding-left: 40px;
+}
+
+.greeting-container {
+  text-align:center;
+  display:inline-flex;
+}
+
+.greeting {
+  font-size: 100px;
+  padding-top: 30px;
+  padding-bottom: 20px;
 }
 
 .main-image {
   float: left;
-  height: 300px;
-  width: 300px;
+  height: 500px;
+  width: auto;
   object-fit: fill;
-  border-radius: 50%;
   margin-left: auto;
   margin-right: 20px;
+  z-index: 2;
 }
 
 .web {
@@ -167,6 +187,23 @@ table {
   border-spacing: 10px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.table-container {
+  background-color:rgba(60, 60, 60, 0.2);
+  border-radius: 4px;
+  padding: 2%;
+}
+
+.self-image {
+  float: left;
+  height: 300px;
+  width: 300px;
+  object-fit: fill;
+  margin-left: auto;
+  margin-right: 20px;
+  border-radius: 50%;
+  z-index: 2;
 }
 
 /*-- Contact Page --*/
@@ -214,7 +251,7 @@ button:focus,
 
 button:active,
 .button:active {
-  background-color: var(--blue-button);
+  background-color: var(--green-button);
   color: var(--gray);
 }
 
@@ -228,30 +265,30 @@ a.button:visited {
 }
 
 /*-- Work --*/
-section h1 {
+.coming {
+  width:fit-content;
+}
+
+.coming-container {
   text-align: center;
 }
 
-.grid__item > h2,
-.grid__item > p {
-  padding: 10px 20px;
+section {
+  overflow-y: hidden;
 }
 
-.grid__item {
-  display: inline-block;
-  width: 33%;
-  background-color: var(--grid-gray);
-  border: 2px;
-  border-radius: 2px;
+section h1 {
+  text-align: center;
 }
 
 @supports (display: grid) {
   .grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
     padding: 20px;
     margin: 0;
+    height: fit-content;
   }
 
   .grid__item {
@@ -261,11 +298,42 @@ section h1 {
     margin: 0;
     border: 2px;
     border-radius: 4px;
+    padding: 15px;
+    padding-bottom: 30px;
   }
 
   .grid__item:last-child {
-    grid-column: 3/3;
-    grid-row: 1/3;
+    grid-column: 1/3;
+    grid-row: 3;
+    min-width: 200px;
+  }
+
+  
+  .grid__item > h2,
+  .grid__item > p,
+  .grid__item > a {
+    padding: 10px;
+    margin: 0;
+  }
+
+  .grid__item > img {
+    height: 350px;
+    width: auto;
+    padding: 20px;
+    margin-left:auto;
+    margin-right:auto;
+  }
+
+  .sample-container {
+    text-align: center;
+  }
+  
+  div > img {
+    height: 350px;
+    width: auto;
+    padding: 20px;
+    margin-left:auto;
+    margin-right:auto;
   }
 }
 
@@ -288,32 +356,51 @@ section h1 {
   }
 }
 
+@keyframes cloud-move-three {
+  from {
+    transform: scaleX(0.2) scaleY(0.2) translate(200vw, -40vw);
+  }
+  to {
+    transform: scaleX(0.2) scaleY(0.2) translate(-100vw, -40vw);
+  }
+}
+
 .cloudy {
+  position: absolute;
   float: left;
   filter: var(--cloud-filter);
   animation: 25s cloud-move infinite alternate linear;
 }
 
 .cloudy_two {
+  position: absolute;
   float: left;
   filter: var(--cloud-filter);
   animation: 30s cloud-move-two infinite alternate linear;
+  z-index: 3;
+}
+
+.cloudy_three {
+  position: absolute;
+  float: left;
+  filter: var(--cloud-filter);
+  animation: 20s cloud-move-three infinite alternate linear;
+  z-index: 1;
 }
 
 /*-- Socials --*/
 .find {
   clear: left;
-  position: relative;
-  bottom: 250px;
+  bottom: 500px;
   text-align: center;
   font-size: 20px;
   padding-top: 30px;
   margin-bottom: 5px;
+  z-index: 2;
 }
 
 .socials > .socials-links {
   clear: both;
-  position: relative;
   bottom: 250px;
   display: flex;
   justify-content: center;
@@ -323,6 +410,7 @@ section h1 {
 
 .slogo {
   width: 50px;
+  z-index: 2;
 }
 
 /*--- Mobile ---*/
@@ -338,10 +426,11 @@ section h1 {
   /*- Header -*/
   header {
     display: flex;
-    margin-bottom: 5%;
     font-size: 0.75rem;
+    height: 10%;
     justify-content: space-evenly;
     flex-direction: column;
+    margin-bottom: 20px;
   }
 
   .left {
@@ -353,6 +442,8 @@ section h1 {
   .logo {
     width: 75px;
     height: auto;
+    filter: var(--cloud-filter);
+    padding-bottom: 8px;
   }
 
   .nav-links ul {
@@ -371,7 +462,7 @@ section h1 {
     align-items: center;
     width: 90%;
     max-width: 1200px;
-    margin: 0 2%;
+    overflow-y: hidden;
   }
 
   .content > ul {
@@ -382,11 +473,17 @@ section h1 {
 
   .main-image {
     float: left;
-    height: 16rem;
-    width: 16rem;
+    height: 250px;
+    width: auto;
     object-fit: fill;
-    border-radius: 50%;
     margin: 2%;
+  }
+
+  .greeting-container {
+    display: inline-block;
+  }
+  .greeting {
+    text-align: center;
   }
 
   /*-- About Me Page --*/
@@ -399,9 +496,23 @@ section h1 {
   }
 
   /*- Works Page -*/
+  .coming {
+    width: 100%;
+    padding-right: 2.5rem;
+    padding-top: 2rem;
+  }
+
   .grid {
     grid-template-columns: 1fr;
     grid-gap: 10px;
+    width: 55%;
+    margin: 0;
+    margin-inline: auto;
+  }
+
+  .grid {
+    width: 35%;
+    margin: 0.5rem;
   }
 
   .grid__item:last-child {
@@ -409,9 +520,14 @@ section h1 {
     grid-row: auto / auto;
   }
 
+  div > img {
+    width: 300px;
+    height: auto;
+  }
+
   /*- Contact Page -*/
   .contact-form {
-    padding: 2% 5%;
+    padding: 2% 4%;
   }
 
   textarea {
@@ -449,6 +565,7 @@ section h1 {
     justify-content: center;
     gap: 15%;
     position: static;
+    padding-bottom: 25px;
   }
 
   .slogo {
