--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,10 @@ header a {
 }
 
 /*-- About Me Page --*/
+.about-title {
+  text-align: center !important;
+}
+
 table {
   text-align: center;
   font-size: larger;
@@ -193,6 +197,7 @@ table {
   background-color:rgba(60, 60, 60, 0.2);
   border-radius: 4px;
   padding: 2%;
+  margin: 5%;
 }
 
 .self-image {
@@ -204,6 +209,40 @@ table {
   margin-right: 20px;
   border-radius: 50%;
   z-index: 2;
+}
+
+.tools-logo {
+  margin: 25px;
+}
+
+.html-logo {
+  width: 100px;
+  height: auto;
+}
+
+.css-logo {
+  width: 75px;
+  height: auto;
+}
+
+.js-logo {
+  width: 80px;
+  height: auto;
+}
+
+.react-logo {
+  width: 85px;
+  height: auto;
+}
+
+.sql-logo {
+  width: 75px;
+  height: auto;
+}
+
+.mongoDB-logo {
+  width: 100px;
+  height: auto;
 }
 
 /*-- Contact Page --*/
@@ -239,6 +278,8 @@ button,
   border: 2px;
   border-radius: 2px;
   transition: 0.2s opacity;
+  width: fit-content;
+  margin-left: 10px !important;
 }
 
 button:hover,
@@ -265,6 +306,11 @@ a.button:visited {
 }
 
 /*-- Work --*/
+.button-container {
+  margin-top: auto !important;
+  padding-top: inherit;
+}
+
 .coming {
   width:fit-content;
 }
@@ -300,6 +346,8 @@ section h1 {
     border-radius: 4px;
     padding: 15px;
     padding-bottom: 30px;
+    display: flex;
+    flex-direction: column;
   }
 
   .grid__item:last-child {
@@ -496,6 +544,14 @@ section h1 {
   }
 
   /*- Works Page -*/
+  a.button {
+    margin-right: 10px;
+  }
+  
+  .button-container {
+    text-align: center;
+  }
+
   .coming {
     width: 100%;
     padding-right: 2.5rem;
