--- a/css/style.css
+++ b/css/style.css
@@ -51,13 +51,18 @@ body {
 input {
   width: 99%;
   height: 99%;
-  border: 2px;
+  border: solid;
+  border-width: 1px;
   border-radius: 2px;
   font-family: var(--body-font);
 }
 
 input:focus {
   outline: none;
+}
+
+.warning {
+  color: rgba(144,0,0,1);
 }
 
 /*-- Header --*/
@@ -129,7 +134,7 @@ header a {
   align-items: center;
   line-height: 30px;
   width: 90%;
-  max-width: 1200px;
+  max-width: 1000px;
   margin: 0 auto;
 }
 
@@ -154,6 +159,7 @@ header a {
 .greeting-container {
   text-align:center;
   display:inline-flex;
+  width: 700px;
 }
 
 .greeting {
@@ -177,6 +183,18 @@ header a {
   color: var(--gold);
   background-color: var(--gray);
   font-family: "Noto Sans", sans-serif;
+}
+
+.checkoutlink {
+  display: none;
+}
+
+.checkoutimg {
+  position: absolute !important;
+  width: 25rem;
+  left: 49%;
+  top: 31rem;
+  z-index: -1;
 }
 
 /*-- About Me Page --*/
@@ -206,7 +224,7 @@ table {
   width: 300px;
   object-fit: fill;
   margin-left: auto;
-  margin-right: 20px;
+  margin-right: auto;
   border-radius: 50%;
   z-index: 2;
 }
@@ -216,48 +234,68 @@ table {
 }
 
 .html-logo {
-  width: 100px;
-  height: auto;
+  width: 120px !important;
+  height: auto !important;
 }
 
 .css-logo {
-  width: 75px;
-  height: auto;
+  width: 100px  !important;
+  height: auto  !important;
 }
 
 .js-logo {
-  width: 80px;
-  height: auto;
+  width: 100px  !important;
+  height: auto  !important;
+  padding-bottom: 30px;
 }
 
 .react-logo {
-  width: 85px;
-  height: auto;
+  width: 110px  !important;
+  height: auto  !important;
+  padding-bottom: 30px;
 }
 
 .sql-logo {
-  width: 75px;
-  height: auto;
+  width: 100px  !important;
+  height: auto  !important;
 }
 
 .mongoDB-logo {
-  width: 100px;
-  height: auto;
+  width: 140px  !important;
+  height: auto  !important;
+  padding-bottom: 40px;
 }
 
 /*-- Contact Page --*/
+.contact-bg {
+  position: absolute;
+  z-index: -1;
+}
+
+.contact-list {
+  margin-top: 30px;
+  text-align: center;
+}
+
 .contact-form {
+  background-color: rgba(60,60,60,0.2);
   display: flex;
   flex-direction: column;
   position: relative;
   float: right;
-  padding-left: 2%;
+  padding: 2%;
+  border-radius: 2px;
+}
+
+.message {
+  margin-top: 0 !important;
 }
 
 .email,
 .phone,
 .message {
   align-self: flex-start;
+  border-color: rgba(60,60,60,0.6);
 }
 
 .standard-label {
@@ -336,8 +374,8 @@ section h1 {
     margin: 0;
     height: fit-content;
   }
-
-  .grid__item {
+  
+  .grid__item, .skill__item {
     background-color: var(--grid-gray);
     width: auto;
     min-height: auto;
@@ -348,6 +386,17 @@ section h1 {
     padding-bottom: 30px;
     display: flex;
     flex-direction: column;
+  }
+
+  .skill__item {
+    flex-direction: row !important;
+    place-self: center;
+    grid-column: 1/3;
+    padding-bottom: 15px !important;
+  }
+
+  .skill__container {
+    text-align: center;
   }
 
   .grid__item:last-child {
@@ -388,28 +437,28 @@ section h1 {
 /*--- Clouds ---*/
 @keyframes cloud-move {
   from {
-    transform: scaleX(0.25) scaleY(0.25) translate(-75vw, -40vw);
+    transform: scaleX(0.25) scaleY(0.25) translate(-75vw, -50vw);
   }
   to {
-    transform: scaleX(0.25) scaleY(0.25) translate(200vw, -40vw);
+    transform: scaleX(0.25) scaleY(0.25) translate(200vw, -50vw);
   }
 }
 
 @keyframes cloud-move-two {
   from {
-    transform: scaleX(0.4) scaleY(0.4) translate(200vw, -10vw);
+    transform: scaleX(0.4) scaleY(0.4) translate(200vw, -25vw);
   }
   to {
-    transform: scaleX(0.4) scaleY(0.4) translate(-100vw, -10vw);
+    transform: scaleX(0.4) scaleY(0.4) translate(-100vw, -25vw);
   }
 }
 
 @keyframes cloud-move-three {
   from {
-    transform: scaleX(0.2) scaleY(0.2) translate(200vw, -40vw);
+    transform: scaleX(0.2) scaleY(0.2) translate(200vw, -78vw);
   }
   to {
-    transform: scaleX(0.2) scaleY(0.2) translate(-100vw, -40vw);
+    transform: scaleX(0.2) scaleY(0.2) translate(-100vw, -78vw);
   }
 }
 
@@ -418,6 +467,7 @@ section h1 {
   float: left;
   filter: var(--cloud-filter);
   animation: 25s cloud-move infinite alternate linear;
+  z-index: -1;
 }
 
 .cloudy_two {
@@ -462,7 +512,7 @@ section h1 {
 }
 
 /*--- Mobile ---*/
-@media all and (max-width: 1000px) {
+@media all and (max-width: 1100px) {
   h1 {
     font-size: 22px;
   }
@@ -530,8 +580,17 @@ section h1 {
   .greeting-container {
     display: inline-block;
   }
+
   .greeting {
     text-align: center;
+  }
+
+  .checkoutlink {
+    display: inline-block;
+  }
+  
+  .checkoutimg {
+    display: none;
   }
 
   /*-- About Me Page --*/
@@ -546,6 +605,7 @@ section h1 {
   /*- Works Page -*/
   a.button {
     margin-right: 10px;
+    max-height: 4rem;
   }
   
   .button-container {
@@ -561,7 +621,7 @@ section h1 {
   .grid {
     grid-template-columns: 1fr;
     grid-gap: 10px;
-    width: 55%;
+    width: auto !important;
     margin: 0;
     margin-inline: auto;
   }
@@ -586,6 +646,10 @@ section h1 {
     padding: 2% 4%;
   }
 
+  .contact-list {
+    padding-bottom: 30px !important;
+  }
+
   textarea {
     width: 20rem;
     resize: none;
@@ -593,7 +657,7 @@ section h1 {
 
   button,
   .button {
-    padding: 5%;
+    padding: 16px;
     border: 2rem;
     border-radius: 2rem;
     align-self: center;
