--- a/css/style.css
+++ b/css/style.css
@@ -400,9 +400,10 @@ section h1 {
   }
 
   .grid__item:last-child {
-    grid-column: 1/3;
+    grid-column: 2;
     grid-row: 3;
     min-width: 200px;
+    place-content: center;
   }
 
   
