--- a/css/style.production.css
+++ b/css/style.production.css
@@ -459,12 +459,12 @@ section h1 {
   }
 
   .grid__item:last-child {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1/3;
+    -ms-grid-column: 2;
+    grid-column: 2;
     -ms-grid-row: 3;
     grid-row: 3;
     min-width: 200px;
+    place-content: center;
   }
 
   
