--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,7 @@ header a {
   text-align:center;
   display:inline-flex;
   width: 700px;
+  padding-top: 64px;
 }
 
 .greeting {
@@ -190,7 +191,6 @@ header a {
 }
 
 .checkoutimg {
-  position: absolute !important;
   width: 25rem;
   left: 49%;
   top: 31rem;
@@ -562,6 +562,7 @@ section h1 {
     width: 90%;
     max-width: 1200px;
     overflow-y: hidden;
+    overflow-x: hidden;
   }
 
   .content > ul {
