--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,10 +1,3 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.4.14,
-* Autoprefixer: v10.4.7
-* Browsers: last 4 version
-*/
-
 /*-- Variables --*/
 :root {
   /*- Colors -*/
@@ -24,8 +17,7 @@
 
 /*-- General --*/
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
@@ -36,9 +28,7 @@ body {
 li {
   list-style-type: none;
   display: inline;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 h1 {
@@ -77,12 +67,8 @@ input:focus {
 
 /*-- Header --*/
 header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   margin-bottom: 80px;
   font-size: large;
   font-family: "Bungee", cursive;
@@ -102,26 +88,19 @@ header a {
   width: auto;
   height: 35px;
   padding-top: 4px;
-  -webkit-filter: var(--cloud-filter);
-          filter: var(--cloud-filter);
+  filter: var(--cloud-filter);
 }
 
 .nav-links ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 64px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   padding-right: 64px;
   padding-top: 10px;
 }
 
 .nav-links a {
   color: var(--white);
-  -webkit-transition: 0.2s;
-  -o-transition: 0.2s;
   transition: 0.2s;
 }
 
@@ -151,12 +130,8 @@ header a {
 
 /*-- Main Page Content --*/
 .content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   line-height: 30px;
   width: 90%;
   max-width: 1000px;
@@ -164,8 +139,6 @@ header a {
 }
 
 .content a {
-  -webkit-transition: 0.2s;
-  -o-transition: 0.2s;
   transition: 0.2s;
 }
 
@@ -185,10 +158,9 @@ header a {
 
 .greeting-container {
   text-align:center;
-  display:-webkit-inline-box;
-  display:-ms-inline-flexbox;
   display:inline-flex;
   width: 700px;
+  padding-top: 64px;
 }
 
 .greeting {
@@ -201,8 +173,7 @@ header a {
   float: left;
   height: 500px;
   width: auto;
-  -o-object-fit: fill;
-     object-fit: fill;
+  object-fit: fill;
   margin-left: auto;
   margin-right: 20px;
   z-index: 2;
@@ -221,6 +192,8 @@ header a {
 
 .checkoutimg {
   width: 25rem;
+  left: 49%;
+  top: 31rem;
   z-index: -1;
 }
 
@@ -249,8 +222,7 @@ table {
   float: left;
   height: 300px;
   width: 300px;
-  -o-object-fit: fill;
-     object-fit: fill;
+  object-fit: fill;
   margin-left: auto;
   margin-right: auto;
   border-radius: 50%;
@@ -307,13 +279,8 @@ table {
 
 .contact-form {
   background-color: rgba(60,60,60,0.2);
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   position: relative;
   float: right;
   padding: 2%;
@@ -327,8 +294,7 @@ table {
 .email,
 .phone,
 .message {
-  -ms-flex-item-align: start;
-      align-self: flex-start;
+  align-self: flex-start;
   border-color: rgba(60,60,60,0.6);
 }
 
@@ -349,11 +315,7 @@ button,
   padding: 12px 28px;
   border: 2px;
   border-radius: 2px;
-  -webkit-transition: 0.2s opacity;
-  -o-transition: 0.2s opacity;
   transition: 0.2s opacity;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
   width: fit-content;
   margin-left: 10px !important;
 }
@@ -388,8 +350,6 @@ a.button:visited {
 }
 
 .coming {
-  width:-webkit-fit-content;
-  width:-moz-fit-content;
   width:fit-content;
 }
 
@@ -407,15 +367,11 @@ section h1 {
 
 @supports (display: grid) {
   .grid {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
     padding: 20px;
     margin: 0;
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
     height: fit-content;
   }
   
@@ -428,25 +384,13 @@ section h1 {
     border-radius: 4px;
     padding: 15px;
     padding-bottom: 30px;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
 
   .skill__item {
-    -webkit-box-orient: horizontal !important;
-    -webkit-box-direction: normal !important;
-        -ms-flex-direction: row !important;
-            flex-direction: row !important;
-    -ms-grid-row-align: center;
-    -ms-grid-column-align: center;
+    flex-direction: row !important;
     place-self: center;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
     grid-column: 1/3;
     padding-bottom: 15px !important;
   }
@@ -456,9 +400,7 @@ section h1 {
   }
 
   .grid__item:last-child {
-    -ms-grid-column: 2;
     grid-column: 2;
-    -ms-grid-row: 3;
     grid-row: 3;
     min-width: 200px;
     place-content: center;
@@ -494,98 +436,54 @@ section h1 {
 }
 
 /*--- Clouds ---*/
-@-webkit-keyframes cloud-move {
-  from {
-    -webkit-transform: scaleX(0.25) scaleY(0.25) translate(-75vw, -50vw);
-            transform: scaleX(0.25) scaleY(0.25) translate(-75vw, -50vw);
-  }
-  to {
-    -webkit-transform: scaleX(0.25) scaleY(0.25) translate(200vw, -50vw);
-            transform: scaleX(0.25) scaleY(0.25) translate(200vw, -50vw);
-  }
-}
 @keyframes cloud-move {
   from {
-    -webkit-transform: scaleX(0.25) scaleY(0.25) translate(-75vw, -50vw);
-            transform: scaleX(0.25) scaleY(0.25) translate(-75vw, -50vw);
+    transform: scaleX(0.25) scaleY(0.25) translate(-75vw, -50vw);
   }
   to {
-    -webkit-transform: scaleX(0.25) scaleY(0.25) translate(200vw, -50vw);
-            transform: scaleX(0.25) scaleY(0.25) translate(200vw, -50vw);
-  }
-}
-
-@-webkit-keyframes cloud-move-two {
-  from {
-    -webkit-transform: scaleX(0.4) scaleY(0.4) translate(200vw, -25vw);
-            transform: scaleX(0.4) scaleY(0.4) translate(200vw, -25vw);
-  }
-  to {
-    -webkit-transform: scaleX(0.4) scaleY(0.4) translate(-100vw, -25vw);
-            transform: scaleX(0.4) scaleY(0.4) translate(-100vw, -25vw);
+    transform: scaleX(0.25) scaleY(0.25) translate(200vw, -50vw);
   }
 }
 
 @keyframes cloud-move-two {
   from {
-    -webkit-transform: scaleX(0.4) scaleY(0.4) translate(200vw, -25vw);
-            transform: scaleX(0.4) scaleY(0.4) translate(200vw, -25vw);
+    transform: scaleX(0.4) scaleY(0.4) translate(200vw, -25vw);
   }
   to {
-    -webkit-transform: scaleX(0.4) scaleY(0.4) translate(-100vw, -25vw);
-            transform: scaleX(0.4) scaleY(0.4) translate(-100vw, -25vw);
-  }
-}
-
-@-webkit-keyframes cloud-move-three {
-  from {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) translate(200vw, -78vw);
-            transform: scaleX(0.2) scaleY(0.2) translate(200vw, -78vw);
-  }
-  to {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) translate(-100vw, -78vw);
-            transform: scaleX(0.2) scaleY(0.2) translate(-100vw, -78vw);
+    transform: scaleX(0.4) scaleY(0.4) translate(-100vw, -25vw);
   }
 }
 
 @keyframes cloud-move-three {
   from {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) translate(200vw, -78vw);
-            transform: scaleX(0.2) scaleY(0.2) translate(200vw, -78vw);
+    transform: scaleX(0.2) scaleY(0.2) translate(200vw, -78vw);
   }
   to {
-    -webkit-transform: scaleX(0.2) scaleY(0.2) translate(-100vw, -78vw);
-            transform: scaleX(0.2) scaleY(0.2) translate(-100vw, -78vw);
+    transform: scaleX(0.2) scaleY(0.2) translate(-100vw, -78vw);
   }
 }
 
 .cloudy {
   position: absolute;
   float: left;
-  -webkit-filter: var(--cloud-filter);
-          filter: var(--cloud-filter);
-  -webkit-animation: 25s cloud-move infinite alternate linear;
-          animation: 25s cloud-move infinite alternate linear;
+  filter: var(--cloud-filter);
+  animation: 25s cloud-move infinite alternate linear;
   z-index: -1;
 }
 
 .cloudy_two {
   position: absolute;
   float: left;
-  -webkit-filter: var(--cloud-filter);
-          filter: var(--cloud-filter);
-  -webkit-animation: 30s cloud-move-two infinite alternate linear;
-          animation: 30s cloud-move-two infinite alternate linear;
+  filter: var(--cloud-filter);
+  animation: 30s cloud-move-two infinite alternate linear;
   z-index: 3;
 }
 
 .cloudy_three {
   position: absolute;
   float: left;
-  -webkit-filter: var(--cloud-filter);
-          filter: var(--cloud-filter);
-  -webkit-animation: 20s cloud-move-three infinite alternate linear;
-          animation: 20s cloud-move-three infinite alternate linear;
+  filter: var(--cloud-filter);
+  animation: 20s cloud-move-three infinite alternate linear;
   z-index: 1;
 }
 
@@ -603,12 +501,8 @@ section h1 {
 .socials > .socials-links {
   clear: both;
   bottom: 250px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   gap: 30px;
   padding: 5px 10px;
 }
@@ -630,18 +524,11 @@ section h1 {
 
   /*- Header -*/
   header {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     font-size: 0.75rem;
     height: 10%;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    justify-content: space-evenly;
+    flex-direction: column;
     margin-bottom: 20px;
   }
 
@@ -654,39 +541,28 @@ section h1 {
   .logo {
     width: 75px;
     height: auto;
-    -webkit-filter: var(--cloud-filter);
-            filter: var(--cloud-filter);
+    filter: var(--cloud-filter);
     padding-bottom: 8px;
   }
 
   .nav-links ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     gap: 15%;
     text-align: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
     padding: 2% 10%;
     margin-top: 1%;
   }
 
   /*-- Main Page Content --*/
   .content {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    flex-direction: column;
+    align-items: center;
     width: 90%;
     max-width: 1200px;
     overflow-y: hidden;
+    overflow-x: hidden;
   }
 
   .content > ul {
@@ -699,8 +575,7 @@ section h1 {
     float: left;
     height: 250px;
     width: auto;
-    -o-object-fit: fill;
-       object-fit: fill;
+    object-fit: fill;
     margin: 2%;
   }
 
@@ -746,7 +621,6 @@ section h1 {
   }
 
   .grid {
-    -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
     grid-gap: 10px;
     width: auto !important;
@@ -788,9 +662,7 @@ section h1 {
     padding: 16px;
     border: 2rem;
     border-radius: 2rem;
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
+    align-self: center;
     width: 80%;
   }
 
@@ -811,12 +683,8 @@ section h1 {
 
   .socials > .socials-links {
     clear: both;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
     gap: 15%;
     position: static;
     padding-bottom: 25px;
